--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" href="./src/style.css" type="text/css">
+  <link rel="stylesheet" href="./src/styles/main.css" type="text/css">
   <title>Eagle-Down</title>
 </head>
 
 <body>
-  <div class="game-con">
+  <div class="game-container">
     <canvas class="game-canvas" width="352" height="198"></canvas>
   </div>
   <script type="module" src="/src/init.ts"></script>
